fix: hide visibility setting when user click add another email and add validator
see trello card for details

fixes issue 7584

--- a/src/app/cdk/side-bar/modals/modal-email/modal-email.component.scss
+++ b/src/app/cdk/side-bar/modals/modal-email/modal-email.component.scss
@@ -102,3 +102,7 @@ mat-form-field {
     padding-bottom: 18px !important;
   }
 }
+
+.only-verified {
+  padding: 0 4px;
+}
